fix cta spacing

--- a/src/App.css
+++ b/src/App.css
@@ -343,7 +343,8 @@ main {
 }
 
 .cta-title,
-.cta-subtitle {
+.cta-subtitle,
+.cta-section {
   margin: 20px 0;
 }
 
